# chess

./: Cargo.toml  index.html  index.src.css  package-lock.json  tailwind.config.js  todo.md
src/: board.rs  fen.rs  main.rs  move_list.rs  moves.rs  piece.rs  pos.rs  take_while.rs
src/board/: castling.rs  promotion_menu.rs  state.rs
